Styling index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css?family=Fjalla+One&subset=latin-ext');
+ @import url('https://fonts.googleapis.com/css?family=Alegreya:400i&subset=latin-ext');
+ @import url('https://fonts.googleapis.com/css?family=Roboto:500,700');
