--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,25 +1,21 @@
+* {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: greyscale;
+}
+
 body {
   background-color: #fff;
   color: #333;
-  margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  line-height: 18px;
-}
-
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
 }
 
 a {
+  text-decoration: none;
   color: #000;
 
   &:visited {
@@ -27,18 +23,13 @@ a {
   }
 
   &:hover {
+    cursor: pointer;
     color: #fff;
+    text-decoration: none;
     background-color: #000;
   }
 }
 
-th {
-  padding-bottom: 5px;
-}
-
-td {
-  padding: 0 5px 7px;
-}
 
 div {
   &.field, &.actions {
@@ -48,6 +39,8 @@ div {
 
 #notice {
   color: green;
+  margin: 10px;
+  padding: 5px;
 }
 
 .field_with_errors {
