--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Quote</h1>
+<div class="container">
+  <h1>New Quote</h1>
 
-<%= render 'form', quote: @quote %>
+  <%= render 'form', quote: @quote %>
 
-<%= link_to 'Back', root_path %>
+  <div class="btn-back"><%= link_to 'Back', root_path %></div>
+</div>
