--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
-  <div class="add-btn"><%= link_to 'New Quote', new_quote_path %></div>
+  <div class="add-btn"><%= link_to 'Add Quote', new_quote_path %></div>
 
   <div class="quotes-grid">
     <% @quotes.each do |quote| %>
