--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <h1>New Quote</h1>
+  <div class="form-container">
+    <h1>New Quote</h1>
 
-  <%= render 'form', quote: @quote %>
+    <%= render 'form', quote: @quote %>
 
-  <div class="btn-back"><%= link_to 'Back', root_path %></div>
+    <div class="btn-back"><%= link_to 'Back', root_path %></div>
+  </div>
 </div>
